--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
     maven { url "https://maven.architectury.dev" }
     maven { url "https://maven.shedaniel.me" }
     maven { url "https://maven.terraformersmc.com/releases" }
+    maven { url "https://raw.githubusercontent.com/SolidBlock-cn/mvn-repo/main" }
 }
 
 fabricApi {
@@ -42,7 +43,8 @@ dependencies {
     modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
 
     //HT Materials
-    modCompileOnly(fileTree(dir: "libs", include: '*.jar'))
+    modImplementation(fileTree(dir: "libs", include: '*.jar'))
+    modImplementation("pers.solid:brrp-fabric:1.0.1-1.18.2") { transitive = false }
 
     //Roughly Enough Items
     modImplementation("me.shedaniel.cloth:cloth-config-fabric:6.4.90") {
@@ -58,10 +60,10 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", version.split("-")[0]
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": project.version.split("-")[0]
     }
 }
 
